2001-10-22  Bart Schaefer  <schaefer@zsh.org>

	* 16109: Src/init.c: Use a fixed initial fdtable_size to fix crash
	resulting from a huge memory allocation, as reported in 16082.

2001-10-20  Bart Schaefer  <schaefer@zsh.org>

	* Adapted from Stefan Dalibor, 16043: Src/utils.c: checkrmall()
	must not print to shout when shout's not valid.

2001-10-17  Clint Adams  <clint@zsh.org>

        * 16078: Completion/Unix/Command/_zip:
        add -r, change description for -R.

2001-10-17  Sven Wischnowsky  <wischnow@zsh.org>

	* 16002: Completion/Unix/Type/_path_files: use expanded paths
	(expand style with value prefix) only when we are at the last
	matcher spec

	* 15991: Src/Zle/compcore.c: hide all but one match with the
	same string in the list even for unsorted groups

	* 15944: Completion/Unix/Type/_path_files, Doc/Zsh/compsys.yo:
	make expand style (file completion) work again; no more special
	behaviour with menu completion; try to make docs clearer

	* 15653: Completion/Base/Core/_main_complete: make insert-tab
	really default to `true'

	* 15615: Completion/Unix/Type/_path_files: -[12n] options don't
	get arguments

2001-10-16  Bart Schaefer  <schaefer@zsh.org>

	* 15812: Doc/Zsh/zle.yo: Cross-reference parameters used by ZLE.

	* 15702: Doc/Zsh/expn.yo: Alphabetize (mostly) parameter flag
	descriptions; fix a couple of typos; parameter rule #12.

	* 15676: Test/A01grammar.ztst, Test/A05execution.ztst,
	Test/C02cond.ztst, Test/D04parameter.ztst, Test/E01options.ztst,
	Test/E02xtrace.ztst, Test/Y01completion.ztst,
	Test/Y03arguments.ztst:  Tweak %prep sections to exit sooner on
	certain failures (by adding blank lines).  Other whitespace-only
	changes.  Avoid [[ ! -r ... ]] test when running as root, as it
	always fails in that case.  Test `typeset -ft' (function trace).

	* Adam Spiers: unposted: Doc/Zsh/expn.yo: mention the word
	`greedy' in the docs for the S flag, to make it easier to find for
	those used to Perl-speak.
